Function that adds the first N natural numbers

--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -1,38 +1,87 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
    "source": [
-    "print('hello world')"
+    "Write an algorithm that computes the sum of the first N natural numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "git is cool\n"
+      "The sum of the first 5 is 15\n"
      ]
     }
    ],
    "source": [
-    "print('git is cool')"
+    "number = int(input('Please insert a positive number: '))\n",
+    "counter = 1\n",
+    "sum = 0\n",
+    "\n",
+    "while counter <= number:\n",
+    "   sum = sum + counter\n",
+    "   counter = counter + 1\n",
+    "print(f'The sum of the first {number} is {sum}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us convert this code into a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this is a function definition\n",
+    "def exercise1(number: int) -> int:\n",
+    "    counter: int = 1\n",
+    "    sum: int = 0\n",
+    "\n",
+    "    while counter <= number:\n",
+    "      sum = sum + counter\n",
+    "      counter = counter + 1\n",
+    "    return sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5050"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#this is a function call.\n",
+    "exercise1(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
