function that computes factorial

--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -77,6 +77,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that computes the factorial of a positive number N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 5 is 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "number: int = int(input('Insert a positive number: '))\n",
+    "counter = 1\n",
+    "factorial = 1\n",
+    "\n",
+    "while counter <= number:\n",
+    "    factorial = factorial * counter\n",
+    "    counter = counter + 1\n",
+    "print(f'The factorial of {number} is {factorial}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us convert this code into a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this is a function definition\n",
+    "def factorial(number: int) -> int:\n",
+    "    counter = 1\n",
+    "    fact = 1\n",
+    "\n",
+    "    while counter <= number:\n",
+    "       fact = fact * counter\n",
+    "       counter = counter + 1\n",
+    "    return fact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#calling the function\n",
+    "factorial(5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
