Function that counts the number of digits

--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -153,11 +153,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that counts the number of digits in a given natural number N."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 8976542 contains 7 digits\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input('Insert a positive number: '))\n",
+    "temp = number\n",
+    "counter = 0\n",
+    "\n",
+    "while temp != 0:\n",
+    "    temp = temp // 10\n",
+    "    counter = counter + 1\n",
+    "print(f'The number {number} contains {counter} digits')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us convert this code into a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def count_digits(number: int) -> int:\n",
+    "    counter = 0\n",
+    "    while number != 0:\n",
+    "        number = number // 10\n",
+    "        counter = counter + 1\n",
+    "    return counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_digits(25)"
+   ]
   }
  ],
  "metadata": {
