--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of the first 5 is 15\n"
+      "The sum of the first 8 is 36\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "5050"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The factorial of 5 is 120\n"
+      "The factorial of 9 is 362880\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "120"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number 8976542 contains 7 digits\n"
+      "The number 9 contains 1 digits\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -215,13 +215,181 @@
        "2"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "count_digits(25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function to test if a number is even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_even(number: int) -> bool:\n",
+    "    if(number % 2 == 0):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that counts the even digits in a given natural number N ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of the even digits in 4584 is 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "number: int = int(input('Insert the number: '))\n",
+    "temp = number\n",
+    "count = 0\n",
+    "while temp != 0:\n",
+    "    remainder = temp % 10  # grab the last digit\n",
+    "    if is_even(remainder):    # test if it is even\n",
+    "        count = count + 1  #update the summation variable\n",
+    "    else:\n",
+    "        pass # if it is odd, just ignore.\n",
+    "    temp = temp // 10\n",
+    "print(f'The sum of the even digits in {number} is {count}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_evens(number: int):\n",
+    "    num_evens = 0\n",
+    "    while number != 0:\n",
+    "        remainder = number % 10\n",
+    "        if is_even(remainder): \n",
+    "            num_evens = num_evens + 1\n",
+    "        else: \n",
+    "            pass\n",
+    "        number = number // 10\n",
+    "    return num_evens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that counts the odd digits in a given natural number N ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your homework"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that computes the sum of digits in a given natural number N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of the digits in 1245 is 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "number: int = int(input('Insert the number: '))\n",
+    "temp = number\n",
+    "summation = 0\n",
+    "while temp != 0:\n",
+    "    remainder = temp % 10 # since we care about the digit, we need to store it.\n",
+    "    summation = summation + remainder\n",
+    "    temp = temp // 10\n",
+    "print(f'The sum of the digits in {number} is {summation}') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_digits(number: int) -> int:\n",
+    "    summation = 0\n",
+    "    while number != 0:\n",
+    "        remainder = number % 10\n",
+    "        summation = summation + remainder\n",
+    "        number = number // 10\n",
+    "    return summation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that computes the sum of even digits in a given natural number N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of the even digits in 12345 is 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "number: int = int(input('Insert the number :'))\n",
+    "temp = number\n",
+    "summation = 0\n",
+    "while temp != 0:\n",
+    "    remainder = temp % 10\n",
+    "    if is_even(remainder):\n",
+    "        summation = summation + remainder\n",
+    "    else:\n",
+    "        pass\n",
+    "    temp = temp // 10\n",
+    "print(f'The sum of the even digits in {number} is {summation}')"
    ]
   }
  ],
