--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -391,6 +391,67 @@
     "    temp = temp // 10\n",
     "print(f'The sum of the even digits in {number} is {summation}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# homework, write an algorithm that adds only the odd digits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that checks if a given natural number N contains only\n",
+    "even digits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number: int = int(input('Insert a number: '))\n",
+    "temp = number\n",
+    "while temp != 0:\n",
+    "    remainder = temp % 10\n",
+    "    if is_even(remainder):\n",
+    "        pass\n",
+    "    else:\n",
+    "        break\n",
+    "    temp = temp // 10\n",
+    "\n",
+    "if temp != 0: #we are using this if coz, we don't know what caused the loop to terminate\n",
+    "    print('The number contains odd digits')\n",
+    "else:\n",
+    "    print('The number only contains even digits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def only_evens(number: int) -> bool:\n",
+    "    while number != 0:\n",
+    "        remainder = number % 10 # grabbing the remainder\n",
+    "        if !is_even(remainder): \n",
+    "            return False\n",
+    "        number = number // 10\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "687"
+   ]
   }
  ],
  "metadata": {
