--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -425,7 +425,7 @@
     "        break\n",
     "    temp = temp // 10\n",
     "\n",
-    "if temp != 0: #we are using this if coz, we don't know what caused the loop to terminate\n",
+    "if temp != 0: #wee are using this if coz, we don't know what caused the loop to terminate\n",
     "    print('The number contains odd digits')\n",
     "else:\n",
     "    print('The number only contains even digits')"
