--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -300,16 +300,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# function to test if a number is odd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_odd(number: int) -> bool:\n",
+    "    if (number % 1 == 0):\n",
+    "        return  True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Write an algorithm that counts the odd digits in a given natural number N ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of odd digits in 123456is 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# your homework\n"
+    "# your homework\n",
+    "\n",
+    "number : int = int(input('insert the number: '))\n",
+    "copy= number\n",
+    "count = 0\n",
+    "while copy != 0 :\n",
+    "    remainder = copy % 10\n",
+    "    if is_odd(remainder): \n",
+    "        count = count + 1\n",
+    "    else:\n",
+    "        pass\n",
+    "    copy = copy // 10\n",
+    "print ( f'The sum of odd digits in {number}is {count}')"
    ]
   },
   {
