--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,17 +300,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# function to test if a number is odd\n"
+    "function to test if a number is odd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_odd(number: int) -> bool:\n",
-    "    if (number % 1 == 0):\n",
+    "    if (number % 2 == 1):\n",
     "        return  True\n",
     "    else:\n",
     "        return False"
@@ -349,7 +349,7 @@
     "    else:\n",
     "        pass\n",
     "    copy = copy // 10\n",
-    "print ( f'The sum of odd digits in {number}is {count}')"
+    "print ( f'The sum of odd digits in {number} is {count}')"
    ]
   },
   {
@@ -430,6 +430,492 @@
     "        pass\n",
     "    temp = temp // 10\n",
     "print(f'The sum of the even digits in {number} is {summation}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that asks a user for a number and displays if the number is strictly positive or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-56.0 is negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "number: float = float(input('Insert the number: '))\n",
+    "if number > 0:\n",
+    "    print(f'{number} is strictly positive')\n",
+    "elif number < 0:\n",
+    "    print(f'{number} is negative')\n",
+    "else:\n",
+    "    print(f'{number} is zero')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that asks a user for two numbers m and n and display if their product is positive, negative or zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product of 0.0 and 4.0 is zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "m: float = float(input('Insert the number: '))\n",
+    "n: float = float(input('Insert the number: '))\n",
+    "\n",
+    "if (m > 0) and (n > 0):\n",
+    "    print(f'The product of {m} and {n} is positive')\n",
+    "elif (m > 0) and (n < 0):\n",
+    "    print(f'The product of {m} and {n} is negative')\n",
+    "elif (m < 0) and (n > 0):\n",
+    "    print(f'The product of {m} and {n} is negative')\n",
+    "elif (m < 0) and (n < 0):\n",
+    "    print(f'The product of {m} and {n} is positive')\n",
+    "else:\n",
+    "    print(f'The product of {m} and {n} is zero')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write an algorithm that computes the absolute value of a number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The absolute value of -5.0 is 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "number: float = float(input('Insert the number: '))\n",
+    "if number >= 0:\n",
+    "    print(f'The absolute value of {number} is {number}')\n",
+    "else:\n",
+    "    print(f'The absolute value of {number} is {-1 * number}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write an algorithm that takes in an integer and displays if it is odd or even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "number: int = int(input('Insert the number: '))\n",
+    "if number % 2 == 0:\n",
+    "    print(f'{number} is even')\n",
+    "else:\n",
+    "    print(f'{number} is odd')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an algorithm that takes in a number and tests if it is between 0 and 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 is between 0 and 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "number: int = int(input('Insert the number: '))\n",
+    "if 0 <= number <= 20:\n",
+    "    print(f'{number} is between 0 and 20')\n",
+    "else:\n",
+    "    print(f'{number} is not between 0 and 20')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write an algorithm that takes in two numbers m and n and displays the maximum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0 is equal to 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "m: float = float(input('Insert the number: '))\n",
+    "n: float = float(input('Insert the number: '))\n",
+    "\n",
+    "if m > n:\n",
+    "    print(f'{m} is greater than {n}')\n",
+    "elif m == n:\n",
+    "    print(f'{m} is equal to {n}')\n",
+    "else:\n",
+    "    print(f'{n} is greater than {m}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write an algorithm that takes in the position of a month and returns the number of days in that month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "month: int = int(input('Insert the month number'))\n",
+    "if 1 <= month <= 12:\n",
+    "    if month in [1, 3, 5, 7, 8, 10, 12]:\n",
+    "        print('31 days')\n",
+    "    elif month == 2:\n",
+    "        print('29 or 28 days')\n",
+    "    else:\n",
+    "        print('30 days')\n",
+    "else:\n",
+    "    print('You input a wrong month position')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write an algorithm that simulates an electronic calculator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The denominator is 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = float(input('insert the first number: '))\n",
+    "n = float(input('insert the second number: '))\n",
+    "operation = input('Insert the operation that you want to perform')\n",
+    "\n",
+    "if operation == '+':\n",
+    "    print(f'{m} + {n} = {m + n}')\n",
+    "elif operation == '-':\n",
+    "    print(f'{m} - {n} = {m - n}')\n",
+    "elif operation == '/':\n",
+    "    if n != 0:\n",
+    "       print(f'{m} / {n} = {m / n}')\n",
+    "    else:\n",
+    "        print('The denominator is 0')\n",
+    "elif operation == '*':\n",
+    "    print(f'{m} * {n} = {m * n}')\n",
+    "else:\n",
+    "    print('Invalid Operation')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that checks if a given natural number N contains a given\n",
+    "digits ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, 9 is not contained in 5487\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contains(number: int, digit: int) -> bool:\n",
+    "    while number != 0:\n",
+    "        remainder = number % 10 # we grab the right most digit\n",
+    "        if remainder == digit: #we check to see if it is equal to what we are looking for.\n",
+    "            return True # we stop the search\n",
+    "        number = number // 10\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def vanessa(): \n",
+    "    number: int = int(input('Insert a number: '))\n",
+    "    digit: int = int(input('Insert the digit: '))\n",
+    "\n",
+    "    if contains(number, digit):\n",
+    "        print(f'Yah, {digit} is contained in {number}')\n",
+    "    else:\n",
+    "        print(f'No, {digit} is not contained in {number}')\n",
+    "\n",
+    "vanessa()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that computes the power function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def power(base: int, exponent: int) -> int:\n",
+    "    result = 1\n",
+    "    while exponent > 0:\n",
+    "       result = result * base\n",
+    "       exponent = exponent - 1\n",
+    "    return result\n",
+    "\n",
+    "def vanessa():\n",
+    "    base: int = int(input('Insert the base: '))\n",
+    "    exponent: int = int(input('Insert the exponent'))\n",
+    "    answer = power(base, exponent)\n",
+    "    print(f'{base} ^ {exponent} = {answer}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that computes the multiplication function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 * 5 = 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply(first: int, second: int) -> int:\n",
+    "    result = 0\n",
+    "    while second > 0:\n",
+    "        result = result + first\n",
+    "        second = second - 1\n",
+    "    return result\n",
+    "\n",
+    "def vanessa():\n",
+    "    first: int = int(input('Insert the first number: '))\n",
+    "    second: int = int(input('Insert the second number'))\n",
+    "    answer = multiply(first, second)\n",
+    "    print(f'{first} * {second} = {answer}')\n",
+    "\n",
+    "vanessa()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that returns the reverse of a given natural number N ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The reverse of 5487 is 7845\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse(number: int) -> int:\n",
+    "    rev = 0\n",
+    "    while number != 0:\n",
+    "        remainder = number % 10\n",
+    "        rev = rev * 10 + remainder\n",
+    "        number = number // 10\n",
+    "    return rev\n",
+    "\n",
+    "def vanessa():\n",
+    "    number = int(input('Insert the number: '))\n",
+    "    answer = reverse(number)\n",
+    "    print(f'The reverse of {number} is {answer}')\n",
+    "\n",
+    "vanessa()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Write a function that checks if a given natural number N is Armstrong "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_armstrong(number: int) -> bool:\n",
+    "    num = count_digits(number) # compute the number of digits\n",
+    "    temp = number # make a copy so that we can compare later\n",
+    "    sum = 0\n",
+    "    while temp != 0:\n",
+    "        remainder = temp % 10\n",
+    "        sum = sum + power(remainder, num)\n",
+    "        temp = temp // 10\n",
+    "    return number == sum # we check if the sum is == to the original number\n",
+    "is_armstrong(8408)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1285,  16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "153\n",
+      "370\n",
+      "371\n",
+      "407\n",
+      "1634\n",
+      "8208\n",
+      "9474\n",
+      "54748\n",
+      "92727\n",
+      "93084\n",
+      "548834\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "153 ----<3>\n",
+    "\n",
+    "153 =? 1^3 + 5^3 + 3^3"
    ]
   }
  ],
