--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The factorial of 9 is 362880\n"
+      "The factorial of 20 is 2432902008176640000\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,6 @@
     "def factorial(number: int) -> int:\n",
     "    counter = 1\n",
     "    fact = 1\n",
-    "\n",
     "    while counter <= number:\n",
     "       fact = fact * counter\n",
     "       counter = counter + 1\n",
@@ -872,50 +871,176 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1285,  16"
+    "Write a function that returns the number of times a given digit appears in a\n",
+    "given natural number N ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "153\n",
-      "370\n",
-      "371\n",
-      "407\n",
-      "1634\n",
-      "8208\n",
-      "9474\n",
-      "54748\n",
-      "92727\n",
-      "93084\n",
-      "548834\n"
+      "There are 3 4's in 457454\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "def frequency(number: int, digit: int) -> int:\n",
+    "   counter = 0\n",
+    "   while number != 0:\n",
+    "      remainder = number % 10\n",
+    "      if remainder == digit:\n",
+    "         counter = counter + 1\n",
+    "      number = number // 10\n",
+    "   return counter\n",
+    "\n",
+    "number = int(input('Insert the number: '))\n",
+    "digit = int(input('Insert the digit: '))\n",
+    "\n",
+    "count = frequency(number, digit)\n",
+    "print(f\"There are {count} {digit}'s in {number}\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "153 ----<3>\n",
+    "Write a program that calculates with how many zeroes the factorial of a given\n",
+    "number ends."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_zeros(number: int) -> int:\n",
+    "    counter = 0\n",
+    "    fact = factorial(number)\n",
+    "    while fact != 0:\n",
+    "        remainder = fact % 10\n",
+    "        if remainder == 0:\n",
+    "            counter = counter + 1\n",
+    "        else:\n",
+    "            return counter\n",
+    "        fact = fact // 10\n",
     "\n",
-    "153 =? 1^3 + 5^3 + 3^3"
+    "count_zeros(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factorial(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that determines if a given natural number is prime "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6760"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "\n",
+    "def is_prime(number: int) -> bool:\n",
+    "    counter = 2\n",
+    "    while counter < sqrt(number):\n",
+    "        remainder = number % counter\n",
+    "        if remainder == 0:\n",
+    "            return False\n",
+    "        counter = counter + 1\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that returns the maximum digit in a given natural number N."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_max(number: int) -> int:\n",
+    "    max = 0\n",
+    "    while number != 0:\n",
+    "        remainder = number % 10\n",
+    "        if remainder > max:\n",
+    "            max = remainder\n",
+    "        number = number // 10\n",
+    "    return max\n",
+    "\n",
+    "get_max(52440)"
    ]
   }
  ],
