--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -1032,7 +1032,7 @@
    ],
    "source": [
     "def get_max(number: int) -> int:\n",
-    "    max = 0\n",
+    "    max = number % 10\n",
     "    while number != 0:\n",
     "        remainder = number % 10\n",
     "        if remainder > max:\n",
@@ -1041,6 +1041,234 @@
     "    return max\n",
     "\n",
     "get_max(52440)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that returns the minimum digit in a given natural number N."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_minimum(number: int) -> int:\n",
+    "    min = number % 10\n",
+    "    while number != 0:\n",
+    "        remainder = number % 10\n",
+    "        if remainder < min:\n",
+    "            min = remainder\n",
+    "        number = number // 10\n",
+    "    return min"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that calculates the sum of the first N squares."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_squares(number: int) -> int:\n",
+    "    counter = 1\n",
+    "    sum = 0\n",
+    "    while counter <= number:\n",
+    "        sum = sum + power(counter, 2)\n",
+    "        counter = counter + 1\n",
+    "    return sum\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that counts the number of digits greater than or equal to a\n",
+    "given digit d in a given natural number N."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_if(number: int, digit: int) -> int:\n",
+    "    counter = 0\n",
+    "    while number != 0:\n",
+    "        remainder = number % 10\n",
+    "        if remainder >= digit:\n",
+    "            counter = counter + 1\n",
+    "        number = number // 10\n",
+    "    return counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that computes the logarithm of a given natural number N\n",
+    "in a given base b."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def log(number: int, base: int) -> int:\n",
+    "    counter = 0\n",
+    "    while number > 1: # only keep dividing as long the number is not 1 or below 1\n",
+    "        counter = counter + 1\n",
+    "        number = number // base\n",
+    "    return counter\n",
+    "\n",
+    "log(100, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function div which, given two positive integers a and\n",
+    "b, return the quotient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def div(number: int, denominator: int) -> int:\n",
+    "    counter = 0\n",
+    "    while number >= denominator:\n",
+    "        counter = counter + 1\n",
+    "        number = number - denominator\n",
+    "    return counter\n",
+    "\n",
+    "div(15, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function mod which, given two positive integers a and\n",
+    "b, return the quotient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mod(number: int, divisor: int) -> int:\n",
+    "    while number >= divisor:\n",
+    "        number = number - divisor\n",
+    "    return number\n",
+    "\n",
+    "mod(13, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that takes in a natural number N in decimal base and\n",
+    "returns the number of bits set to 1 in its binary representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_ones(number: int) -> int:\n",
+    "    counter = 0\n",
+    "    while number != 0:\n",
+    "        remainder = number % 2\n",
+    "        if remainder == 1:\n",
+    "            counter = counter + 1\n",
+    "        number = number // 2\n",
+    "    return counter\n",
+    "\n",
+    "count_ones(7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11 "
    ]
   }
  ],
