--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -56,6 +56,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursive function to add the sum of the first n integers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum_rec(number: int) -> int:\n",
+    "    if number == 1: return 1\n",
+    "    else: return number + sum_rec(number - 1)\n",
+    "\n",
+    "\n",
+    "sum_rec(5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -128,6 +160,39 @@
     "       fact = fact * counter\n",
     "       counter = counter + 1\n",
     "    return fact"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a recursive function that computes the factorial of a positive number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(number: int) -> int:\n",
+    "    if number == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return number * factorial(number - 1)\n",
+    "    \n",
+    "factorial(5)"
    ]
   },
   {
@@ -204,23 +269,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a recursive function that counts the number of digits in a given number"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count_digits(25)"
+    "def is_one_digit(number: int) -> bool:\n",
+    "    return number < 10\n",
+    "\n",
+    "def count_digits(number: int) -> int:\n",
+    "    if is_one_digit(number): return 1\n",
+    "    else:\n",
+    "        return 1 + count_digits(number // 10)\n",
+    "    \n",
+    "count_digits(4578)"
    ]
   },
   {
@@ -247,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write an algorithm that counts the even digits in a given natural number N ."
+    "Write an algorithm that counts the even digits in a given natural number N."
    ]
   },
   {
@@ -293,6 +373,49 @@
     "            pass\n",
     "        number = number // 10\n",
     "    return num_evens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a recursive function that counts the even digits in a given natural number N.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_evens(number: int) -> int:\n",
+    "    if is_one_digit(number):\n",
+    "        return 1 if is_even(number) else 0\n",
+    "    elif is_even(number % 10): # is the digit I am seeing even? If so add 1\n",
+    "        return 1 + count_evens(number // 10)\n",
+    "    else:\n",
+    "        return 0 + count_evens(number // 10)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a recursive function that counts the odd digits in a given natural number N."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if is_even(number):\n",
+    "    return 1\n",
+    "else:\n",
+    "    return 0\n",
+    "\n",
+    "1 if is_even(number) else 0"
    ]
   },
   {
@@ -1262,6 +1385,20 @@
     "    return counter\n",
     "\n",
     "count_ones(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, first_name, second_name, nationality, age):\n",
+    "        self.first_name: str = first_name\n",
+    "        self.second_name: str = second_name\n",
+    "        self.nationality: str = nationality\n",
+    "        self.age: int = age"
    ]
   },
   {
