--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,9 +384,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def count_evens(number: int) -> int:\n",
     "    if is_one_digit(number):\n",
@@ -394,7 +405,9 @@
     "    elif is_even(number % 10): # is the digit I am seeing even? If so add 1\n",
     "        return 1 + count_evens(number // 10)\n",
     "    else:\n",
-    "        return 0 + count_evens(number // 10)\n"
+    "        return 0 + count_evens(number // 10)\n",
+    "\n",
+    "count_evens(78654)\n"
    ]
   },
   {
